# sound_guy

./: Cargo.toml  avatar_settings.json  settings.json  shader.wgsl
resources/: avatar_settings.json  settings.json  shader.wgsl  shadertime.wgsl
src/: graphcis.java  graphics.rs  main.rs  outer_shell.wgsl  shader.wgsl
src/graphics/: avatar.rs  avatar_generator.rs  camera.rs  compute_shader_avatar_outer.wgsl  model.rs  renderer.rs  shader.wgsl  shader_avatar_outer.wgsl  texture.rs
