[package]
name = "sound_guy"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
overflow-checks = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
features = ["derive"]

[dependencies]
rand = "*"
cpal = "*"
clap = {version="*", features = ["derive"]}
obj-rs = "*"
ringbuf = "*"
cgmath = "0.18.0"
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
wgpu = "0.14"
winit = "0.27"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"